SERVER-23219 DBCommandCursor should route getMore operations to original server