src/mongo/client/dbclient_rs.cpp
@@ -898,6 +898,15 @@ rpc::UniqueReply DBClientReplicaSet::runCommandWithMetadata(StringData database,
                                                             StringData command,
                                                             const BSONObj& metadata,
                                                             const BSONObj& commandArgs) {
+    auto ret = runCommandWithMetadataAndTarget(database, command, metadata, commandArgs);
+    return std::move(std::get<0>(ret));
+}
+
+std::tuple<rpc::UniqueReply, DBClientWithCommands*>
+DBClientReplicaSet::runCommandWithMetadataAndTarget(StringData database,
+                                                    StringData command,
+                                                    const BSONObj& metadata,
+                                                    const BSONObj& commandArgs) {
     // This overload exists so we can parse out the read preference and then use server
     // selection directly without having to re-parse the raw message.
 
@@ -920,8 +929,9 @@ rpc::UniqueReply DBClientReplicaSet::runCommandWithMetadata(StringData database,
         // If the command is not runnable on a secondary, we run it on the primary
         // regardless of the read preference.
         !_isSecondaryCommand(command, commandArgs)) {
-        return checkMaster()->runCommandWithMetadata(
-            std::move(database), std::move(command), metadata, commandArgs);
+        auto conn = checkMaster();
+        return std::make_tuple(
+            conn->runCommandWithMetadata(database, command, metadata, commandArgs), conn);
     }
 
     auto rpShared = std::make_shared<ReadPreferenceSetting>(std::move(readPref));
@@ -934,7 +944,8 @@ rpc::UniqueReply DBClientReplicaSet::runCommandWithMetadata(StringData database,
             }
             // We can't move database and command in case this throws
             // and we retry.
-            return conn->runCommandWithMetadata(database, command, metadata, commandArgs);
+            return std::make_tuple(
+                conn->runCommandWithMetadata(database, command, metadata, commandArgs), conn);
         } catch (const DBException& ex) {
             log() << exceptionToStatus();
             invalidateLastSlaveOkCache();
