jstests/noPassthrough/replica_set_connection_getmore.js
@@ -4,7 +4,6 @@
  */
 (function() {
     "use strict";
-
     var rst = new ReplSetTest({nodes: 2});
     rst.startSet();
     rst.initiate();
@@ -17,13 +16,12 @@
     var conn = new Mongo(rst.getURL());
 
     // We force a read mode of "compatibility" so that we can test Mongo.prototype.readMode()
-    // resolves to "legacy" independently of the --readMode passed to the mongo shell running this
+    // resolves to "commands" independently of the --readMode passed to the mongo shell running this
     // test.
     conn.forceReadMode("compatibility");
-    assert.eq("legacy",
+    assert.eq("commands",
               conn.readMode(),
-              "replica set connections created by the mongo shell should use 'legacy' read mode");
-
+              "replica set connections created by the mongo shell should use 'commands' read mode");
     var coll = conn.getDB(dbName)[collName];
     coll.drop();
 
@@ -36,7 +34,11 @@
     rst.awaitReplication();
 
     // Establish a cursor on the secondary and verify that the getMore operations are routed to it.
-    conn.forceReadMode("compatibility");
+    var cursor = coll.find().readPref("secondary").batchSize(2);
+    assert.eq(5, cursor.itcount(), "failed to read the documents from the secondary");
+
+    // Verify that queries work when the read mode is forced to "legacy" reads.
+    conn.forceReadMode("legacy");
     var cursor = coll.find().readPref("secondary").batchSize(2);
     assert.eq(5, cursor.itcount(), "failed to read the documents from the secondary");
 
